# MathParser-Port

./: CMakeLists.txt  LICENSE  README.md  README_ru.md
Src/: MathEngine.cpp  MathEngine.hpp  ShuntingYardAlgorithm.hpp  main.cpp
Src/Algorithms/: ShuntingYardAlgorithm.cpp  ShuntingYardAlgorithm.hpp
Src/Enums/: Associativity.hpp  ChunkType.hpp
Src/Helpers/: ParserHelper.cpp  ParserHelper.hpp
Src/Records/: ChunkExpression.cpp  ChunkExpression.hpp  ChunkNumber.cpp  ChunkNumber.hpp  ExpressionItem.cpp  ExpressionItem.hpp  Function.cpp  Function.hpp  Operand.cpp  Operand.hpp  Operator.cpp  Operator.hpp  PatternExpression.cpp  PatternExpression.hpp  SequenceNumberOperation.cpp  SequenceNumberOperation.hpp
